--- a/kurento.conf
+++ b/kurento.conf
@@ -6,6 +6,11 @@ sdpPattern=pattern.sdp
 [HttpEPServer]
 #serverAddress=localhost
 
+[WebRtcEndPoint]
+#stunServerAddress = xxx.xxx.xxx.xxx
+#stunServerPort = xx
+#pemCertificate = file
+
 # Announced IP Address may be helpful under situations such as the server needs
 # to provide URLs to clients whose host name is different from the one the
 # server is listening in. If this option is not provided, http server will try
