remove obsolete license.txt
Change-Id: I8b0631f8bbad76a9a1088d3129c6436a2f1f443e

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -91,7 +91,7 @@ set(CPACK_PACKAGE_CONTACT "kurento@googlegroups.com")
 set(CPACK_PACKAGE_NAME "kurento")
 set(CPACK_PACKAGE_VENDOR "Kurento")
 set(CPACK_PACKAGE_VERSION ${KMSC_VERSION})
-set(CPACK_RESOURCE_FILE_LICENSE ${CMAKE_SOURCE_DIR}/license.txt)
+set(CPACK_RESOURCE_FILE_LICENSE ${CMAKE_SOURCE_DIR}/LICENSE)
 set(CPACK_PACKAGING_INSTALL_PREFIX "/")
 
 include(CheckTypeSize)
