Fix not adding libraries twice
Change-Id: If606dc4b8408f8a9ae74957248597cf015ca5a59

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -72,7 +72,7 @@ target_link_libraries(server_test
                       ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY}
                       )
 target_link_libraries(server_test ${EVENT_LIBRARIES})
-target_link_libraries(server_test kmsiface ${THRIFT_LIBRARIES} ${EVENT_LIBRARIES})
+target_link_libraries(server_test kmsiface ${THRIFT_LIBRARIES})
 target_link_libraries(server_test ${GSTREAMER_LIBRARIES})
 target_link_libraries(server_test ${GLIBMM_LIBRARIES})
 target_link_libraries(server_test ${UUID_LIBRARIES})
