Split kurento into runtime and development packages
The -dev package comprises .h, .a and .la files

Change-Id: Icebe5c67f113eb89ec6f19e0955e174157fd1efa

--- a/debian/control
+++ b/debian/control
@@ -37,3 +37,11 @@ Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: Streaming Media Server
  The Kurento Media Server processes audio and video streams,
  doing composable pipeline-based processing or media.
+
+
+Package: kurento-dev
+Architecture: any
+Depends: ${shlibs:Depends}, ${misc:Depends}, kurento
+Description: Development files for Kurento Streaming Media Server
+ The Kurento Media Server processes audio and video streams,
+ doing composable pipeline-based processing or media.
