--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,6 +53,7 @@ pkg_check_modules(THRIFT REQUIRED thrift-nb=0.9.0)
 pkg_check_modules(EVENT REQUIRED libevent>=2.0.16-stable)
 pkg_check_modules(GLIBMM REQUIRED glibmm-2.4>=2.37)
 pkg_check_modules(UUID REQUIRED uuid>=2.20.0)
+pkg_check_modules(GMODULE REQUIRED gmodule-2.0>=2.38)
 
 include(ExternalProject)
 
@@ -61,6 +62,8 @@ SET(KMSIFACE_INCLUDE_DIR ${CMAKE_BINARY_DIR}/gen-cpp)
 add_subdirectory(kms-interface)
 
 add_subdirectory(httpepserver)
+
+add_subdirectory(modules)
 
 add_subdirectory(server)
 
