--- a/modules/CMakeLists.txt
+++ b/modules/CMakeLists.txt
@@ -5,3 +5,5 @@ include_directories(example ${THRIFT_INCLUDE_DIRS} ${GLIBMM_INCLUDE_DIRS})
 include_directories(example ${GSTREAMER_INCLUDE_DIRS} ${CMAKE_SOURCE_DIR}/server/)
 
 install(TARGETS example LIBRARY DESTINATION lib/kurento/modules)
+
+add_subdirectory(player)
