Make RecorderEndPoint a module
Change-Id: I96cf81af16d03f3b1d08e4b4fe78b84f710fdf9d

--- a/modules/CMakeLists.txt
+++ b/modules/CMakeLists.txt
@@ -7,3 +7,4 @@ include_directories(example ${GSTREAMER_INCLUDE_DIRS} ${CMAKE_SOURCE_DIR}/server
 install(TARGETS example LIBRARY DESTINATION lib/kurento/modules)
 
 add_subdirectory(player)
+add_subdirectory(recorder)
