--- a/modules/CMakeLists.txt
+++ b/modules/CMakeLists.txt
@@ -9,3 +9,4 @@ install(TARGETS example LIBRARY DESTINATION lib/kurento/modules)
 add_subdirectory(player)
 add_subdirectory(recorder)
 add_subdirectory(webrtc)
+add_subdirectory(chroma)
