Make PointerDetector a module
Change-Id: If78671b090c2621a385b81a80f960b877de4bab3

--- a/modules/CMakeLists.txt
+++ b/modules/CMakeLists.txt
@@ -13,3 +13,4 @@ add_subdirectory(chroma)
 add_subdirectory(rtp)
 add_subdirectory(zbar)
 add_subdirectory(jackvader)
+add_subdirectory(pointerdetector)
