Make PointerDetector2Filter a module
Change-Id: I29a479c1eaa20bae22f962fe4f2e7fc6a497213e

--- a/modules/CMakeLists.txt
+++ b/modules/CMakeLists.txt
@@ -14,3 +14,4 @@ add_subdirectory(rtp)
 add_subdirectory(zbar)
 add_subdirectory(jackvader)
 add_subdirectory(pointerdetector)
+add_subdirectory(pointerdetector2)
