--- a/modules/CMakeLists.txt
+++ b/modules/CMakeLists.txt
@@ -15,3 +15,4 @@ add_subdirectory(zbar)
 add_subdirectory(jackvader)
 add_subdirectory(pointerdetector)
 add_subdirectory(pointerdetector2)
+add_subdirectory(platedetector)
