Make GStreamerFilter a module
Change-Id: I8f1fd27c9b9a5a9629fe49d5a9352fd58978fbcf

--- a/modules/CMakeLists.txt
+++ b/modules/CMakeLists.txt
@@ -17,3 +17,4 @@ add_subdirectory(pointerdetector)
 add_subdirectory(pointerdetector2)
 add_subdirectory(platedetector)
 add_subdirectory(faceoverlay)
+add_subdirectory(gstreamer)
