--- a/modules/CMakeLists.txt
+++ b/modules/CMakeLists.txt
@@ -18,3 +18,4 @@ add_subdirectory(pointerdetector2)
 add_subdirectory(platedetector)
 add_subdirectory(faceoverlay)
 add_subdirectory(gstreamer)
+add_subdirectory(httpget)
