Add libsctp-dev as debian build dependency
Change-Id: I2143a6e38bf34c11c9b4195d65e8675421735c12

--- a/debian/control
+++ b/debian/control
@@ -29,7 +29,8 @@ Build-Depends:
  tesseract-ocr-eng,
  thrift-compiler,
  libjsoncpp-dev,
- uuid-dev
+ uuid-dev,
+ libsctp-dev
 Standards-Version: 3.9.4
 
 
