--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,8 +15,8 @@ if(EXISTS "${CMAKE_SOURCE_DIR}/.git")
 	endif(NOT EXISTS "${CMAKE_SOURCE_DIR}/.git/hooks/pre-commit")
 else(EXISTS "${CMAKE_SOURCE_DIR}/.git")
 	set(KMSC_MAJOR_VERSION 4)
-	set(KMSC_MINOR_VERSION 0)
-	set(KMSC_PATCH_VERSION 1-dev)
+	set(KMSC_MINOR_VERSION 1)
+	set(KMSC_PATCH_VERSION 0)
 	set(KMSC_VERSION
 		${KMSC_MAJOR_VERSION}.${KMSC_MINOR_VERSION}.${KMSC_PATCH_VERSION})
 endif(EXISTS "${CMAKE_SOURCE_DIR}/.git")
