Fix warning in debian package creation
Change-Id: Ie4a4539acbe4c2df1546c9995e0ee42fae0d0bf4

--- a/debian/control
+++ b/debian/control
@@ -52,7 +52,7 @@ Description: Streaming Media Server
 
 Package: kurento-dev
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, kurento
+Depends: ${misc:Depends}, kurento
 Description: Development files for Kurento Streaming Media Server
  The Kurento Media Server processes audio and video streams,
  doing composable pipeline-based processing or media.
