--- a/debian/control
+++ b/debian/control
@@ -52,7 +52,8 @@ Description: Streaming Media Server
 
 Package: kurento-dev
 Architecture: any
-Depends: ${misc:Depends}, kurento
+Depends: ${misc:Depends},
+ kurento (= ${binary:Version})
 Description: Development files for Kurento Streaming Media Server
  The Kurento Media Server processes audio and video streams,
  doing composable pipeline-based processing or media.
