--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -114,30 +114,30 @@ add_definitions(-DBOOST_TEST_DYN_LINK)
 # endif ()
 
 
-# add_executable(http_ep_server_test
-#   http_ep_server_test.cpp
-# )
-#
-# add_dependencies(http_ep_server_test kurento)
-#
-# target_link_libraries(http_ep_server_test
-#                       ${Boost_FILESYSTEM_LIBRARY}
-#                       ${Boost_SYSTEM_LIBRARY}
-#                       ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY}
-#                       )
-#
-# target_link_libraries(http_ep_server_test kmshttpep)
-# target_link_libraries(http_ep_server_test ${GSTREAMER_LIBRARIES})
-# target_link_libraries(http_ep_server_test ${GLIBMM_LIBRARIES})
-# target_link_libraries(http_ep_server_test ${LIBSOUP_LIBRARIES})
-#
-# include_directories(http_ep_server_test ${CMAKE_SOURCE_DIR}/httpepserver)
-# include_directories(http_ep_server_test ${GSTREAMER_INCLUDE_DIRS})
-# include_directories(http_ep_server_test ${GLIBMM_INCLUDE_DIRS})
-# include_directories(http_ep_server_test ${LIBSOUP_INCLUDE_DIRS})
-# include_directories(http_ep_server_test ${CMAKE_SOURCE_DIR}/server)
-#
-# add_definitions(-DBOOST_TEST_DYN_LINK)
+add_executable(http_ep_server_test
+  http_ep_server_test.cpp
+)
+
+add_dependencies(http_ep_server_test kurento)
+
+target_link_libraries(http_ep_server_test
+                      ${Boost_FILESYSTEM_LIBRARY}
+                      ${Boost_SYSTEM_LIBRARY}
+                      ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY}
+                      )
+
+target_link_libraries(http_ep_server_test kmshttpep)
+target_link_libraries(http_ep_server_test ${GSTREAMER_LIBRARIES})
+target_link_libraries(http_ep_server_test ${GLIBMM_LIBRARIES})
+target_link_libraries(http_ep_server_test ${LIBSOUP_LIBRARIES})
+
+include_directories(http_ep_server_test ${CMAKE_SOURCE_DIR}/httpepserver)
+include_directories(http_ep_server_test ${GSTREAMER_INCLUDE_DIRS})
+include_directories(http_ep_server_test ${GLIBMM_INCLUDE_DIRS})
+include_directories(http_ep_server_test ${LIBSOUP_INCLUDE_DIRS})
+include_directories(http_ep_server_test ${CMAKE_SOURCE_DIR}/server)
+
+add_definitions(-DBOOST_TEST_DYN_LINK)
 #
 #
 # set(CFLAGS "-DHAVE_NETINET_IN_H -DUSE_BOOST_THREAD -DHAVE_INTTYPES_H ")
