Add kms-interface-rom as a submodule
Change-Id: Iedb8a459423270825d861547f826809212ef7d5a

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "gst-kurento-plugins"]
 	path = gst-kurento-plugins
 	url = ../gst-kurento-plugins
+[submodule "kms-interface-rom"]
+	path = kms-interface-rom
+	url = ../kms-interface-rom
