--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,7 +16,7 @@ if(EXISTS "${CMAKE_SOURCE_DIR}/.git")
 else(EXISTS "${CMAKE_SOURCE_DIR}/.git")
 	set(KMSC_MAJOR_VERSION 4)
 	set(KMSC_MINOR_VERSION 2)
-	set(KMSC_PATCH_VERSION 5-dev)
+	set(KMSC_PATCH_VERSION 5)
 	set(KMSC_VERSION
 		${KMSC_MAJOR_VERSION}.${KMSC_MINOR_VERSION}.${KMSC_PATCH_VERSION})
 endif(EXISTS "${CMAKE_SOURCE_DIR}/.git")
