Add service class hierarchy
Change-Id: I1bef601d0a4f9c2f44fd5265720979b35cb5c319

--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -3,12 +3,13 @@ find_package(Boost COMPONENTS system filesystem REQUIRED)
 aux_source_directory("common" COMMON)
 aux_source_directory("types" TYPES)
 aux_source_directory("utils" UTILS)
+aux_source_directory("services" SERVICES)
 aux_source_directory(${CMAKE_BINARY_DIR}/rom-cpp GENERATED_CODE)
 
 SET(KMSC_SOURCE main.cpp version.cpp MediaServerServiceHandler.cpp
               ModuleLoader.cpp ServerMethods.cpp ObjectRegistrar.cpp
               EventHandler.cpp
-              ${COMMON} ${TYPES} ${UTILS} ${GENERATED_CODE})
+              ${COMMON} ${TYPES} ${UTILS} ${SERVICES} ${GENERATED_CODE})
 
 set(CFLAGS "-DHAVE_NETINET_IN_H -DUSE_BOOST_THREAD -DHAVE_INTTYPES_H ")
 
