Start thrift server
Change-Id: Iba3c4387f03a16d6e9781000151b960add1aa2ab

--- a/kurento.conf
+++ b/kurento.conf
@@ -1,7 +1,6 @@
 [Server]
-serverAddress=localhost
-serverPort=9090
 sdpPattern=pattern.sdp
+service=Thrift
 
 [HttpEPServer]
 #serverAddress=localhost
@@ -18,3 +17,7 @@ serverPort=9091
 #stunServerAddress = xxx.xxx.xxx.xxx
 #stunServerPort = xx
 #pemCertificate = file
+
+[Thrift]
+serverAddress=localhost
+serverPort=9090
