RabbitMQService: Queue system initialization
Change-Id: I82bf18b4ca62ab21760757a0d63d7b6f929973eb

--- a/kurento.conf
+++ b/kurento.conf
@@ -21,3 +21,10 @@ serverPort=9091
 [Thrift]
 serverAddress=localhost
 serverPort=9090
+
+[RabbitMQ]
+serverAddress = 127.0.0.1
+serverPort = 5672
+username = "guest"
+password = "guest"
+vhost = "/"
