--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -31,6 +31,7 @@ target_link_libraries(kurento ${Boost_FILESYSTEM_LIBRARY} ${Boost_SYSTEM_LIBRARY
 target_link_libraries(kurento ${SIGCPP_LIBRARIES})
 target_link_libraries(kurento ${GMODULE_LIBRARIES})
 target_link_libraries(kurento ${JSONCPP_LIBRARIES})
+target_link_libraries(kurento ${RABBITMQ_LIBRARIES})
 include_directories(kurento ${CMAKE_SOURCE_DIR}/httpepserver)
 include_directories(kurento ${CMAKE_BINARY_DIR})
 include_directories(kurento ${THRIFT_INCLUDE_DIRS} ${GLIBMM_INCLUDE_DIRS})
@@ -43,5 +44,6 @@ include_directories(kurento ${SIGCPP_INCLUDE_DIRS})
 include_directories(kurento ${CMAKE_SOURCE_DIR}/jsonrpc)
 include_directories(kurento ${CMAKE_SOURCE_DIR}/server/types)
 include_directories(kurento ${CMAKE_BINARY_DIR}/rom-cpp)
+include_directories(kurento ${RABBITMQ_INCLUDE_DIRS})
 
 install(TARGETS kurento RUNTIME DESTINATION bin)
