--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,226 +1,95 @@
 find_package (Boost COMPONENTS unit_test_framework REQUIRED)
 find_package(Boost COMPONENTS system filesystem REQUIRED)
 
-# aux_source_directory("${CMAKE_SOURCE_DIR}/server/utils" UTILS)
-#
-# SET(UTILS_TEST_SOURCE utils_test.cpp ../server/common/Operators.cpp ${UTILS})
-# SET_SOURCE_FILES_PROPERTIES(${UTILS_TEST_SOURCE}
-#                 PROPERTIES COMPILE_FLAGS
-#                 -DHAVE_NETINET_IN_H)
-#
-# add_executable(utils_test ${UTILS_TEST_SOURCE})
-# add_dependencies(utils_test kmsiface-project)
-# add_dependencies(utils_test kurento)
-#
-# target_link_libraries(utils_test
-#                       ${Boost_FILESYSTEM_LIBRARY}
-#                       ${Boost_SYSTEM_LIBRARY}
-#                       ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY}
-#                       )
-#
-# target_link_libraries(utils_test kmsiface ${THRIFT_LIBRARIES})
-# target_link_libraries(utils_test ${GLIBMM_LIBRARIES})
-# target_link_libraries(utils_test ${UUID_LIBRARIES})
-#
-# include_directories(utils_test ${THRIFT_INCLUDE_DIRS})
-# include_directories(utils_test ${KMSIFACE_INCLUDE_DIR})
-# include_directories(utils_test ${GLIBMM_INCLUDE_DIRS})
-# include_directories(utils_test ${UUID_INCLUDE_DIRS})
-# include_directories(utils_test ${CMAKE_SOURCE_DIR}/server)
-
 add_definitions(-DBOOST_TEST_DYN_LINK)
 
+if (NOT DEFINED DISABLE_NETWORK_TESTS OR NOT ${DISABLE_NETWORK_TESTS})
 
-# set(MEDIA_HANDLER_TEST_SOURCE media_handler_test.cpp ${UTILS}
-#                               "${CMAKE_SOURCE_DIR}/server/types/MediaHandler.cpp")
-# SET_SOURCE_FILES_PROPERTIES(${MEDIA_HANDLER_TEST_SOURCE}
-#                 PROPERTIES COMPILE_FLAGS
-#                 -DHAVE_NETINET_IN_H)
-#
-# add_executable(media_handler_test ${MEDIA_HANDLER_TEST_SOURCE})
-#
-# target_link_libraries(media_handler_test
-#                       ${Boost_FILESYSTEM_LIBRARY}
-#                       ${Boost_SYSTEM_LIBRARY}
-#                       ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY}
-#                       )
-# target_link_libraries(media_handler_test kmsiface ${THRIFT_LIBRARIES})
-# target_link_libraries(media_handler_test ${GSTREAMER_LIBRARIES} ${GLIBMM_LIBRARIES})
-# target_link_libraries(media_handler_test ${UUID_LIBRARIES})
-#
-# include_directories(media_handler_test ${GLIBMM_INCLUDE_DIRS})
-# include_directories(media_handler_test ${UUID_INCLUDE_DIRS})
-# include_directories(media_handler_test ${CMAKE_SOURCE_DIR}/server)
-#
-#
-# set(CFLAGS "-DHAVE_NETINET_IN_H -DUSE_BOOST_THREAD -DHAVE_INTTYPES_H ")
-# set(CXXFLAGS "-DHAVE_NETINET_IN_H -DUSE_BOOST_THREAD -DHAVE_INTTYPES_H ")
-#
-# set(SERVER_TEST_SOURCE server_test_base.cpp server_test.cpp sdp_end_point_test.cpp ../server/common/Operators.cpp HandlerTest.cpp ${UTILS})
-# set_source_files_properties(${SERVER_TEST_SOURCE}
-#                 PROPERTIES COMPILE_FLAGS ${CFLAGS})
-#
-# add_executable(server_test ${SERVER_TEST_SOURCE})
-# add_dependencies(server_test kmsiface-project)
-# add_dependencies(server_test kurento)
-#
-# target_link_libraries(server_test
-#                       ${Boost_FILESYSTEM_LIBRARY}
-#                       ${Boost_SYSTEM_LIBRARY}
-#                       ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY}
-#                       )
-# target_link_libraries(server_test ${EVENT_LIBRARIES})
-# target_link_libraries(server_test kmsiface ${THRIFT_LIBRARIES})
-# target_link_libraries(server_test ${GSTREAMER_LIBRARIES})
-# target_link_libraries(server_test ${GLIBMM_LIBRARIES})
-# target_link_libraries(server_test ${UUID_LIBRARIES})
-# target_link_libraries(server_test ${GLIB2_LIBRARIES} -lpthread)
-#
-# include_directories(server_test ${THRIFT_INCLUDE_DIRS})
-# include_directories(server_test ${GSTREAMER_INCLUDE_DIRS})
-# include_directories(server_test ${GLIBMM_INCLUDE_DIRS})
-# include_directories(server_test ${UUID_INCLUDE_DIRS})
-# include_directories(server_test ${KMSIFACE_INCLUDE_DIR})
-# include_directories(server_test ${CMAKE_SOURCE_DIR}/server)
-#
-#
-# # Temporally disabled
-# if (0)
-# add_executable(server_memory_test server_test_base.cpp server_memory_test.cpp
-#                 memory.cpp)
-# add_dependencies(server_memory_test kmsiface-project)
-# add_dependencies(server_memory_test kurento)
-#
-# target_link_libraries(server_memory_test
-#                       ${Boost_FILESYSTEM_LIBRARY}
-#                       ${Boost_SYSTEM_LIBRARY}
-#                       ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY}
-#                       )
-# target_link_libraries(server_memory_test ${EVENT_LIBRARIES})
-# target_link_libraries(server_memory_test kmsiface ${THRIFT_LIBRARIES})
-# target_link_libraries(server_memory_test ${GSTREAMER_LIBRARIES})
-# target_link_libraries(server_memory_test ${GLIBMM_LIBRARIES})
-#
-# include_directories(server_memory_test ${THRIFT_INCLUDE_DIRS})
-# include_directories(server_memory_test ${GSTREAMER_INCLUDE_DIRS})
-# include_directories(server_memory_test ${GLIBMM_INCLUDE_DIRS})
-# include_directories(server_memory_test ${KMSIFACE_INCLUDE_DIR})
-# include_directories(server_memory_test ${CMAKE_SOURCE_DIR}/server)
-#
-# endif ()
-
-
-add_executable(http_ep_server_test
-  http_ep_server_test.cpp
+set (TEST_PROPERTIES
+  "GST_PLUGIN_PATH=${CMAKE_BINARY_DIR}/gst-kurento-plugins"
+  "MEDIA_SERVER_CONF_FILE=${CMAKE_SOURCE_DIR}/kurento.conf"
+  "TESSDATA_PREFIX=${CMAKE_SOURCE_DIR}/gst-kurento-plugins/src/filters/platedetector"
+  "SERVER_DIR=${CMAKE_CURRENT_BINARY_DIR}/../server/kurento"
 )
 
-add_dependencies(http_ep_server_test kurento)
+add_test_program (test_http_ep_server http_ep_server_test.cpp)
+add_dependencies(test_http_ep_server
+  kurento
+  kmshttpep
+  ALL
+)
+target_link_libraries(test_http_ep_server
+  kmshttpep
+  ${Boost_FILESYSTEM_LIBRARY}
+  ${Boost_SYSTEM_LIBRARY}
+  ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY}
+  ${GSTREAMER_LIBRARIES}
+  ${GLIBMM_LIBRARIES}
+  ${LIBSOUP_LIBRARIES}
+)
+set_property (TARGET test_http_ep_server PROPERTY INCLUDE_DIRECTORIES
+  ${CMAKE_SOURCE_DIR}/httpepserver
+  ${GSTREAMER_INCLUDE_DIRS}
+  ${GLIBMM_INCLUDE_DIRS}
+  ${LIBSOUP_INCLUDE_DIRS}
+  ${CMAKE_SOURCE_DIR}/server
+)
 
-target_link_libraries(http_ep_server_test
-                      ${Boost_FILESYSTEM_LIBRARY}
-                      ${Boost_SYSTEM_LIBRARY}
-                      ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY}
-                      )
+add_test_program(test_server_json server_json_test.cpp server_test_base.cpp)
+add_dependencies(test_server_json
+  ALL
+  kmsiface
+  kurento
+)
+target_link_libraries(test_server_json
+  kmsiface
+  ${Boost_FILESYSTEM_LIBRARY}
+  ${Boost_SYSTEM_LIBRARY}
+  ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY}
+  ${EVENT_LIBRARIES}
+  ${THRIFT_LIBRARIES}
+  ${GSTREAMER_LIBRARIES}
+  ${GLIBMM_LIBRARIES}
+  ${UUID_LIBRARIES}
+  ${GLIB2_LIBRARIES} -lpthread
+  ${JSONCPP_LIBRARIES}
+)
+set_property (TARGET test_server_json PROPERTY INCLUDE_DIRECTORIES
+  ${THRIFT_INCLUDE_DIRS}
+  ${GSTREAMER_INCLUDE_DIRS}
+  ${GLIBMM_INCLUDE_DIRS}
+  ${UUID_INCLUDE_DIRS}
+  ${KMSIFACE_INCLUDE_DIR}
+  ${JSONCPP_INCLUDE_DIR}
+  ${CMAKE_SOURCE_DIR}/server
+)
 
-target_link_libraries(http_ep_server_test kmshttpep)
-target_link_libraries(http_ep_server_test ${GSTREAMER_LIBRARIES})
-target_link_libraries(http_ep_server_test ${GLIBMM_LIBRARIES})
-target_link_libraries(http_ep_server_test ${LIBSOUP_LIBRARIES})
-
-include_directories(http_ep_server_test ${CMAKE_SOURCE_DIR}/httpepserver)
-include_directories(http_ep_server_test ${GSTREAMER_INCLUDE_DIRS})
-include_directories(http_ep_server_test ${GLIBMM_INCLUDE_DIRS})
-include_directories(http_ep_server_test ${LIBSOUP_INCLUDE_DIRS})
-include_directories(http_ep_server_test ${CMAKE_SOURCE_DIR}/server)
-
-#
-#
-# set(CFLAGS "-DHAVE_NETINET_IN_H -DUSE_BOOST_THREAD -DHAVE_INTTYPES_H ")
-# set(CXXFLAGS "-DHAVE_NETINET_IN_H -DUSE_BOOST_THREAD -DHAVE_INTTYPES_H ")
-#
-# set(SERVER_UNEXPECTED_TEST_SOURCE server_test_base.cpp server_unexpected_test.cpp sdp_end_point_test.cpp ../server/common/Operators.cpp HandlerTest.cpp ${UTILS})
-# set_source_files_properties(${SERVER_UNEXPECTED_TEST_SOURCE}
-#                 PROPERTIES COMPILE_FLAGS ${CFLAGS})
-#
-# add_executable(server_unexpected_test ${SERVER_UNEXPECTED_TEST_SOURCE})
-# add_dependencies(server_unexpected_test kmsiface-project)
-# add_dependencies(server_unexpected_test kurento)
-#
-# target_link_libraries(server_unexpected_test
-#                       ${Boost_FILESYSTEM_LIBRARY}
-#                       ${Boost_SYSTEM_LIBRARY}
-#                       ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY}
-#                       )
-# target_link_libraries(server_unexpected_test ${EVENT_LIBRARIES})
-# target_link_libraries(server_unexpected_test kmsiface ${THRIFT_LIBRARIES})
-# target_link_libraries(server_unexpected_test ${GSTREAMER_LIBRARIES})
-# target_link_libraries(server_unexpected_test ${GLIBMM_LIBRARIES})
-# target_link_libraries(server_unexpected_test ${UUID_LIBRARIES})
-# target_link_libraries(server_unexpected_test ${GLIB2_LIBRARIES} -lpthread)
-#
-# include_directories(server_unexpected_test ${THRIFT_INCLUDE_DIRS})
-# include_directories(server_unexpected_test ${GSTREAMER_INCLUDE_DIRS})
-# include_directories(server_unexpected_test ${GLIBMM_INCLUDE_DIRS})
-# include_directories(server_unexpected_test ${UUID_INCLUDE_DIRS})
-# include_directories(server_unexpected_test ${KMSIFACE_INCLUDE_DIR})
-# include_directories(server_unexpected_test ${CMAKE_SOURCE_DIR}/server)
-
-# set(CFLAGS "-DHAVE_NETINET_IN_H -DUSE_BOOST_THREAD -DHAVE_INTTYPES_H ")
-# set(CXXFLAGS "-DHAVE_NETINET_IN_H -DUSE_BOOST_THREAD -DHAVE_INTTYPES_H ")
-
-set(SERVER_JSON_TEST_SOURCE server_test_base.cpp server_json_test.cpp)
-# set_source_files_properties(${SERVER_JSON_TEST_SOURCE}
-#                 PROPERTIES COMPILE_FLAGS ${CFLAGS})
-
-add_executable(server_json_test ${SERVER_JSON_TEST_SOURCE})
-add_dependencies(server_json_test kmsiface)
-add_dependencies(server_json_test kurento)
-
-target_link_libraries(server_json_test
-                      ${Boost_FILESYSTEM_LIBRARY}
-                      ${Boost_SYSTEM_LIBRARY}
-                      ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY}
-                      )
-target_link_libraries(server_json_test ${EVENT_LIBRARIES})
-target_link_libraries(server_json_test kmsiface ${THRIFT_LIBRARIES})
-target_link_libraries(server_json_test ${GSTREAMER_LIBRARIES})
-target_link_libraries(server_json_test ${GLIBMM_LIBRARIES})
-target_link_libraries(server_json_test ${UUID_LIBRARIES})
-target_link_libraries(server_json_test ${GLIB2_LIBRARIES} -lpthread)
-target_link_libraries(server_json_test ${JSONCPP_LIBRARIES})
-
-include_directories(server_json_test ${THRIFT_INCLUDE_DIRS})
-include_directories(server_json_test ${GSTREAMER_INCLUDE_DIRS})
-include_directories(server_json_test ${GLIBMM_INCLUDE_DIRS})
-include_directories(server_json_test ${UUID_INCLUDE_DIRS})
-include_directories(server_json_test ${KMSIFACE_INCLUDE_DIR})
-include_directories(server_json_test ${JSONCPP_INCLUDE_DIR})
-include_directories(server_json_test ${CMAKE_SOURCE_DIR}/server)
-
-
-set(SERVER_JSON_SESSION_TEST_SOURCE server_test_base.cpp server_json_session.cpp)
-
-add_executable(server_json_session ${SERVER_JSON_SESSION_TEST_SOURCE})
-add_dependencies(server_json_session kmsiface)
-add_dependencies(server_json_session kurento)
-
+add_test_program(server_json_session server_test_base.cpp server_json_session.cpp)
+add_dependencies(server_json_session
+  ALL
+  kmsiface
+  kurento
+)
 target_link_libraries(server_json_session
-                      ${Boost_FILESYSTEM_LIBRARY}
-                      ${Boost_SYSTEM_LIBRARY}
-                      ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY}
-                      )
-target_link_libraries(server_json_session ${EVENT_LIBRARIES})
-target_link_libraries(server_json_session kmsiface ${THRIFT_LIBRARIES})
-target_link_libraries(server_json_session ${GSTREAMER_LIBRARIES})
-target_link_libraries(server_json_session ${GLIBMM_LIBRARIES})
-target_link_libraries(server_json_session ${UUID_LIBRARIES})
-target_link_libraries(server_json_session ${GLIB2_LIBRARIES} -lpthread)
-target_link_libraries(server_json_session ${JSONCPP_LIBRARIES})
+  kmsiface
+  ${Boost_FILESYSTEM_LIBRARY}
+  ${Boost_SYSTEM_LIBRARY}
+  ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY}
+  ${EVENT_LIBRARIES}
+  ${THRIFT_LIBRARIES}
+  ${GSTREAMER_LIBRARIES}
+  ${GLIBMM_LIBRARIES}
+  ${UUID_LIBRARIES}
+  ${GLIB2_LIBRARIES} -lpthread
+  ${JSONCPP_LIBRARIES}
+)
+set_property (TARGET server_json_session  PROPERTY INCLUDE_DIRECTORIES
+  ${THRIFT_INCLUDE_DIRS}
+  ${GSTREAMER_INCLUDE_DIRS}
+  ${GLIBMM_INCLUDE_DIRS}
+  ${UUID_INCLUDE_DIRS}
+  ${KMSIFACE_INCLUDE_DIR}
+  ${JSONCPP_INCLUDE_DIR}
+  ${CMAKE_SOURCE_DIR}/server)
 
-include_directories(server_json_session ${THRIFT_INCLUDE_DIRS})
-include_directories(server_json_session ${GSTREAMER_INCLUDE_DIRS})
-include_directories(server_json_session ${GLIBMM_INCLUDE_DIRS})
-include_directories(server_json_session ${UUID_INCLUDE_DIRS})
-include_directories(server_json_session ${KMSIFACE_INCLUDE_DIR})
-include_directories(server_json_session ${JSONCPP_INCLUDE_DIR})
-include_directories(server_json_session ${CMAKE_SOURCE_DIR}/server)
+endif(NOT DEFINED DISABLE_NETWORK_TESTS OR NOT ${DISABLE_NETWORK_TESTS})
