debian: Add librabbitmq-dev as a build dependency
Change-Id: I2366e039e305ae6b4e4d12e9b09a42c34b9d259b

--- a/debian/control
+++ b/debian/control
@@ -31,6 +31,7 @@ Build-Depends:
  libjsoncpp-dev,
  uuid-dev,
  libsctp-dev,
+ librabbitmq-dev,
  ktool-rom-processor (>= 1.1.0)
 Standards-Version: 3.9.4
 
