--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -42,6 +42,7 @@ include_directories(kurento ${GMODULE_INCLUDE_DIRS})
 include_directories(kurento ${JSONCPP_INCLUDE_DIRS})
 include_directories(kurento ${SIGCPP_INCLUDE_DIRS})
 include_directories(kurento ${CMAKE_CURRENT_SOURCE_DIR}/utils)
+include_directories(kurento ${CMAKE_CURRENT_SOURCE_DIR}/common)
 include_directories(kurento ${CMAKE_SOURCE_DIR}/jsonrpc)
 include_directories(kurento ${CMAKE_SOURCE_DIR}/server/types)
 include_directories(kurento ${CMAKE_SOURCE_DIR}/server/services)
