--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,8 +26,8 @@ if(EXISTS ${GIT_EXEC} AND EXISTS "${GIT_DIR}")
   endif ()
 else()
   set(PROJECT_MAJOR_VERSION 4)
-  set(PROJECT_MINOR_VERSION 2)
-  set(PROJECT_PATCH_VERSION 6-dev)
+  set(PROJECT_MINOR_VERSION 3)
+  set(PROJECT_PATCH_VERSION 0)
   set(PROJECT_VERSION
       ${PROJECT_MAJOR_VERSION}.${PROJECT_MINOR_VERSION}.${PROJECT_PATCH_VERSION})
 endif()
