--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,7 +27,7 @@ if(EXISTS ${GIT_EXEC} AND EXISTS "${GIT_DIR}")
 else()
   set(PROJECT_MAJOR_VERSION 4)
   set(PROJECT_MINOR_VERSION 3)
-  set(PROJECT_PATCH_VERSION 2)
+  set(PROJECT_PATCH_VERSION 3-dev)
   set(PROJECT_VERSION
       ${PROJECT_MAJOR_VERSION}.${PROJECT_MINOR_VERSION}.${PROJECT_PATCH_VERSION})
 endif()
