cmake: Prepare cmake to use kms-cmake-utils project
Change-Id: I899c7b0f712d652608845fe1d52360256a2859c6

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,36 +1,12 @@
 cmake_minimum_required(VERSION 2.8)
 
-set (PROJECT_NAME "kurento-media-server")
+project ("kurento-media-server")
 
-project (kurento-media-server)
+find_package(KurentoHelpers REQUIRED)
 
-find_program(GIT_EXEC git)
+include (KurentoGitHelpers)
 
-SET (TAG "${PROJECT_NAME}-")
-
-execute_process(COMMAND ${GIT_EXEC} rev-parse --git-dir OUTPUT_VARIABLE GIT_DIR
-                OUTPUT_STRIP_TRAILING_WHITESPACE)
-
-if(EXISTS ${GIT_EXEC} AND EXISTS "${GIT_DIR}")
-  execute_process(COMMAND ${GIT_EXEC} submodule init WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
-  execute_process(COMMAND ${GIT_EXEC} submodule update WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
-  execute_process(COMMAND ${GIT_EXEC} remote update WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
-  execute_process(COMMAND ${GIT_EXEC} describe --abbrev=6 --tags --dirty --always --match "${TAG}*"
-                  OUTPUT_VARIABLE PROJECT_VERSION
-                  OUTPUT_STRIP_TRAILING_WHITESPACE
-                  WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
-  string(REGEX REPLACE "^${TAG}(.*)" "\\1" PROJECT_VERSION ${PROJECT_VERSION})
-  if (NOT EXISTS ${GIT_DIR}/hooks/pre-commit)
-    execute_process(COMMAND ln -s ${CMAKE_CURRENT_SOURCE_DIR}/hooks/pre-commit.hook
-                    "${GIT_DIR}/hooks/pre-commit")
-  endif ()
-else()
-  set(PROJECT_MAJOR_VERSION 4)
-  set(PROJECT_MINOR_VERSION 3)
-  set(PROJECT_PATCH_VERSION 3-dev)
-  set(PROJECT_VERSION
-      ${PROJECT_MAJOR_VERSION}.${PROJECT_MINOR_VERSION}.${PROJECT_PATCH_VERSION})
-endif()
+get_git_version (PROJECT_VERSION 4.3.3-dev)
 
 message (STATUS "Compiling ${PROJECT_NAME}-${PROJECT_VERSION}")
 
