cmake: Add info message about KurentoHelpers
Change-Id: I590da63b9e62d0705d7b72bd8f9d99ec7d857be7

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,9 @@ cmake_minimum_required(VERSION 2.8)
 
 project ("kurento-media-server")
 
+message ("If KurentoHelpers is not found, then it is necessary to install
+          kms-cmake-utils package from the kurento repository")
+
 find_package(KurentoHelpers REQUIRED)
 
 include (KurentoGitHelpers)
