Use external jsonrpc library
Change-Id: Ia06a842a9fd45b5ff8d5d9a13aaf2998ee98bb9e

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -53,7 +53,7 @@ target_link_libraries(test_server_json
   ${GLIBMM_LIBRARIES}
   ${UUID_LIBRARIES}
   ${GLIB2_LIBRARIES} -lpthread
-  ${JSONCPP_LIBRARIES}
+  ${JSONRPC_LIBRARIES}
 )
 set_property (TARGET test_server_json PROPERTY INCLUDE_DIRECTORIES
   ${THRIFT_INCLUDE_DIRS}
@@ -61,7 +61,7 @@ set_property (TARGET test_server_json PROPERTY INCLUDE_DIRECTORIES
   ${GLIBMM_INCLUDE_DIRS}
   ${UUID_INCLUDE_DIRS}
   ${KMSIFACE_INCLUDE_DIR}
-  ${JSONCPP_INCLUDE_DIR}
+  ${JSONRPC_INCLUDE_DIR}
   ${CMAKE_SOURCE_DIR}/server
 )
 
@@ -82,7 +82,7 @@ target_link_libraries(server_json_session
   ${GLIBMM_LIBRARIES}
   ${UUID_LIBRARIES}
   ${GLIB2_LIBRARIES} -lpthread
-  ${JSONCPP_LIBRARIES}
+  ${JSONRPC_LIBRARIES}
 )
 set_property (TARGET server_json_session  PROPERTY INCLUDE_DIRECTORIES
   ${THRIFT_INCLUDE_DIRS}
@@ -90,7 +90,7 @@ set_property (TARGET server_json_session  PROPERTY INCLUDE_DIRECTORIES
   ${GLIBMM_INCLUDE_DIRS}
   ${UUID_INCLUDE_DIRS}
   ${KMSIFACE_INCLUDE_DIR}
-  ${JSONCPP_INCLUDE_DIR}
+  ${JSONRPC_INCLUDE_DIR}
   ${CMAKE_SOURCE_DIR}/server)
 
 endif(NOT DEFINED DISABLE_NETWORK_TESTS OR NOT ${DISABLE_NETWORK_TESTS})
