--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -17,11 +17,10 @@ set_source_files_properties(${KMSC_SOURCE}
 		PROPERTIES COMPILE_FLAGS ${CFLAGS})
 
 add_executable(kurento ${KMSC_SOURCE})
-add_dependencies(kurento jsonrpc)
 add_dependencies(kurento kmsiface)
 add_dependencies(kurento plugins)
 
-target_link_libraries(kurento kmshttpep jsonrpc)
+target_link_libraries(kurento kmshttpep)
 target_link_libraries(kurento kmsiface ${THRIFT_LIBRARIES} ${EVENT_LIBRARIES})
 target_link_libraries(kurento ${GSTREAMER_LIBRARIES} ${GLIBMM_LIBRARIES})
 target_link_libraries(kurento ${GSTREAMER_SDP_LIBRARIES} )
@@ -30,7 +29,7 @@ target_link_libraries(kurento ${GLIB2_LIBRARIES} -lpthread)
 target_link_libraries(kurento ${Boost_FILESYSTEM_LIBRARY} ${Boost_SYSTEM_LIBRARY})
 target_link_libraries(kurento ${SIGCPP_LIBRARIES})
 target_link_libraries(kurento ${GMODULE_LIBRARIES})
-target_link_libraries(kurento ${JSONCPP_LIBRARIES})
+target_link_libraries(kurento ${JSONRPC_LIBRARIES})
 target_link_libraries(kurento ${RABBITMQ_LIBRARIES})
 include_directories(kurento ${CMAKE_SOURCE_DIR}/httpepserver)
 include_directories(kurento ${CMAKE_BINARY_DIR})
@@ -39,7 +38,7 @@ include_directories(kurento ${GSTREAMER_INCLUDE_DIRS})
 include_directories(kurento ${UUID_INCLUDE_DIRS})
 include_directories(kurento ${KMSIFACE_INCLUDE_DIR} ${CMAKE_SOURCE_DIR}/server)
 include_directories(kurento ${GMODULE_INCLUDE_DIRS})
-include_directories(kurento ${JSONCPP_INCLUDE_DIRS})
+include_directories(kurento ${JSONRPC_INCLUDE_DIRS})
 include_directories(kurento ${SIGCPP_INCLUDE_DIRS})
 include_directories(kurento ${CMAKE_CURRENT_SOURCE_DIR}/utils)
 include_directories(kurento ${CMAKE_CURRENT_SOURCE_DIR}/common)
