Add debian build dependencies
Change-Id: Ib367755229a012d7f9fda2a62e48479cbe171e4f

--- a/debian/control
+++ b/debian/control
@@ -32,7 +32,9 @@ Build-Depends:
  uuid-dev,
  libsctp-dev,
  librabbitmq-dev,
- ktool-rom-processor (>= 1.1.0)
+ ktool-rom-processor (>= 1.1.0),
+ kms-jsonrpc-dev (>= 0.0.6),
+ kms-cmake-utils
 Standards-Version: 3.9.4
 
 Package: kurento
