--- a/debian/control
+++ b/debian/control
@@ -16,8 +16,8 @@ Build-Depends:
  libevent-dev,
  libglibmm-2.4-dev,
  libgnutls28-dev,
- libgstreamer1.0-dev,
- libgstreamer-plugins-base1.0-dev,
+ libgstreamer1.0-dev (>= 1.3.3),
+ libgstreamer-plugins-base1.0-dev (>= 1.3.3),
  libnice-dev,
  libopencv-dev,
  libsoup2.4-dev,
@@ -40,12 +40,12 @@ Standards-Version: 3.9.4
 Package: kurento
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends},
- gstreamer1.0-plugins-base (>= 1.2.3),
+ gstreamer1.0-plugins-base (>= 1.3.3),
  gstreamer1.0-libav,
  gstreamer1.0-nice,
- gstreamer1.0-plugins-bad (>= 1.2.3),
- gstreamer1.0-plugins-good (>= 1.2.3),
- gstreamer1.0-plugins-ugly (>= 1.2.3),
+ gstreamer1.0-plugins-bad (>= 1.3.3),
+ gstreamer1.0-plugins-good (>= 1.3.3),
+ gstreamer1.0-plugins-ugly (>= 1.3.3),
  gnutls-bin,
  libopencv-dev
 Description: Kurento Streaming Media Server
