--- a/kurento.conf
+++ b/kurento.conf
@@ -16,6 +16,12 @@ serverPort=9091
 [WebRtcEndPoint]
 #stunServerAddress = xxx.xxx.xxx.xxx
 #stunServerPort = xx
+
+# TURN URL gives the necessary info to configure TURN for WebRTC.
+#  'address' must be an IP (not a domain)."
+#  'transport' is optional (UDP by default).",
+#turnURL = user:password@address:port(?transport=[udp|tcp|tls])
+
 #pemCertificate = file
 
 [Thrift]
