kurento.conf: fix TURN URL description
Change-Id: I8bfbcd4f86f2d587152d9d2126047fa96beb99eb

--- a/kurento.conf
+++ b/kurento.conf
@@ -18,8 +18,8 @@ serverPort=9091
 #stunServerPort = xx
 
 # TURN URL gives the necessary info to configure TURN for WebRTC.
-#  'address' must be an IP (not a domain)."
-#  'transport' is optional (UDP by default).",
+#  'address' must be an IP (not a domain).
+#  'transport' is optional (UDP by default).
 #turnURL = user:password@address:port(?transport=[udp|tcp|tls])
 
 #pemCertificate = file
