Change c++ std flag from c++0x to c++11
This way we remove deprecated c++0x flag

Change-Id: Iadaf5d1a4067ed3fe6214a54312e2c45ec3dddde

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,7 +35,7 @@ set (DISABLE_TESTS ${OLD_DISABLE_TESTS})
 CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/config.h.cmake ${CMAKE_CURRENT_BINARY_DIR}/config.h)
 
 # TODO: Check if HAVE_INIT_TYPES_H has to be added (not in all systems)
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -Wall -Werror -std=c++0x -DGST_DISABLE_DEPRECATED")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -Wall -Werror -std=c++11 -DGST_DISABLE_DEPRECATED")
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g -Wall -Werror -std=c99 -DGST_DISABLE_DEPRECATED")
 
 if (${PLATE_DETECTOR_CHECK})
