--- a/debian/control
+++ b/debian/control
@@ -34,7 +34,8 @@ Build-Depends:
  librabbitmq-dev,
  ktool-rom-processor (>= 1.1.0),
  kms-jsonrpc-dev (>= 0.0.6),
- kms-cmake-utils
+ kms-cmake-utils (>> 0.0.3),
+ kms-gstmarshal-dev
 Standards-Version: 3.9.4
 
 Package: kurento
