--- a/debian/control
+++ b/debian/control
@@ -28,13 +28,13 @@ Build-Depends:
  tesseract-ocr-dev,
  tesseract-ocr-eng,
  thrift-compiler,
- libjsoncpp-dev,
+ libjsoncpp-dev (>= ),
  uuid-dev,
  libsctp-dev,
  librabbitmq-dev,
- ktool-rom-processor (>= 1.1.0),
- kms-jsonrpc-dev (>= 0.0.6),
- kms-cmake-utils (>> 0.0.3),
+ ktool-rom-processor (>= 2.0.0),
+ kms-jsonrpc-dev (>= 0.1.0),
+ kms-cmake-utils (>= 1.0.0),
  kms-gstmarshal-dev
 Standards-Version: 3.9.4
 
