Fix debian/control file
Change-Id: I94efc1e5847c4c245f316a2d3338abfd40e05f92

--- a/debian/control
+++ b/debian/control
@@ -28,7 +28,7 @@ Build-Depends:
  tesseract-ocr-dev,
  tesseract-ocr-eng,
  thrift-compiler,
- libjsoncpp-dev (>= ),
+ libjsoncpp-dev,
  uuid-dev,
  libsctp-dev,
  librabbitmq-dev,
